examples/test/testpolicy18471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18471
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key27: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value22
      podSelector:
        matchLabels:
          key30: value5
          key4: value9
          key41: value4
